// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Img should render with src 1`] = `
<styled.img
  src="logo-small.svg"
/>
`;

exports[`Img should render with srcSet 1`] = `
<styled.img
  srcSet="logo-small.svg"
/>
`;

exports[`Img should render without src 1`] = `
<styled.img
  srcSet=""
/>
`;
